added better than random opponent

--- a/gym-tictactoe/gym_tictactoe/envs/tictactoe_env.ipynb
+++ b/gym-tictactoe/gym_tictactoe/envs/tictactoe_env.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import math\n",
     "import numpy as np\n",
+    "import random\n",
     "import gym\n",
     "from gym import error, spaces, utils\n",
     "from gym.utils import seeding"
@@ -17,39 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def victory_condition_eval(board):\n",
-    "    \n",
-    "    # get unique elements in columns, rows, and diagonals and add them to a list\n",
-    "    \n",
-    "    uniques = []\n",
-    "    uniques.append(np.unique(board[0])) # row 1\n",
-    "    uniques.append(np.unique(board[1])) # row 2\n",
-    "    uniques.append(np.unique(board[2])) # row 3\n",
-    "    uniques.append(np.unique(board[:, 0:1])) # column 1\n",
-    "    uniques.append(np.unique(board[:, 1:2])) # column 2\n",
-    "    uniques.append(np.unique(board[:, 2:3])) # column 3\n",
-    "    uniques.append(np.unique(board.diagonal())) # major diag\n",
-    "    uniques.append(np.unique(np.rot90(board).diagonal())) # minor diag\n",
-    "\n",
-    "    for elements in uniques:\n",
-    "\n",
-    "        if len(elements) is 1: # if only 1 unique element is in grouping\n",
-    "\n",
-    "            if elements[0] != ' ': # if all elements are X or O\n",
-    "                return elements[0] # return winner\n",
-    "\n",
-    "    return ' ' # no winner"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +29,7 @@
     "\n",
     "    def __init__(self):\n",
     "        self.action_space = spaces.Discrete(9) # 9 possible moves always including illegal moves\n",
-    "        self.observation_space = spaces.Discrete(math.pow(3, 9)) # possible combinations is 3^9\n",
+    "        self.observation_space = spaces.Discrete(pow(3, 9)) # possible combinations is 3^9\n",
     "\n",
     "    def step(self, action):\n",
     "        \n",
@@ -69,60 +37,192 @@
     "        reward = 0 # set default to 0\n",
     "        \n",
     "        # actions are [0,1,2,3,4,5,6,7,8]\n",
-    "        row, col = np.int8(action / 3), np.int8(action % 3) # get row and column of move\n",
+    "        row_p, col_p = np.int8(action / 3), np.int8(action % 3) # get row and column of move\n",
     "        \n",
-    "        board = self.state['board'] # get board\n",
-    "        player = self.state['player'] # get player\n",
+    "        board = self.__state['board'] # get board\n",
+    "        player = self.__state['player'] # get player\n",
+    "        opponent = self.__state['opponent'] # get opponent\n",
     "        \n",
-    "        if board[row][col] != ' ': # illegal move\n",
+    "        if board[row_p][col_p] != ' ': # illegal move\n",
     "            done = True\n",
     "            reward = -1000\n",
     "            \n",
     "        else: # legal move\n",
-    "            board[row][col] = player # place piece on board\n",
-    "            winner = victory_condition_eval(board) # check for victory\n",
-    "            if winner != ' ': # victory achieved if 1 or -1 achieved (self playing tictactoe)\n",
+    "            \n",
+    "            possible_win_move_p = victory_move(board, (row_p, col_p)) # check for victory\n",
+    "            board[row_p][col_p] = player # place piece on board\n",
+    "            \n",
+    "            if player in possible_win_move_p:\n",
+    "                \n",
     "                done = True\n",
     "                reward = 1000\n",
+    "            \n",
+    "            elif not get_empty_spaces(board):\n",
+    "                \n",
+    "                done = True\n",
+    "                reward = 0   \n",
+    "            \n",
     "            else:\n",
-    "                if player == 'X':\n",
-    "                    self.state['player'] = 'O'\n",
-    "                else:\n",
-    "                    self.state['player'] = 'X'\n",
+    "                \n",
+    "                row_o, col_o = tictactoe_solver(board, opponent)\n",
+    "\n",
+    "                possible_win_move_o = victory_move(board, (row_o, col_o))\n",
+    "                board[row_o][col_o] = opponent\n",
+    "                         \n",
+    "                if opponent in possible_win_move_o:\n",
+    "                    \n",
+    "                    done = True\n",
+    "                    reward = -1000\n",
+    "                    \n",
+    "                elif not get_empty_spaces(board):\n",
+    "                    done = True\n",
+    "                    reward = 0 \n",
     "                    \n",
     "        observation = dict(self.__state) # copy of game state\n",
     "        info = {} # empty info\n",
     "\n",
     "        return observation, reward, done, info\n",
     "\n",
-    "    def reset(self):\n",
+    "    def reset(self, player = 'X'):\n",
     "        self.__state = {} # initalize state dictionary\n",
     "        self.__state['board'] = np.full((3,3), ' ') # 0 is empty spot\n",
-    "        self.__state['player'] = 'X'\n",
+    "        \n",
+    "        if player == 'X':\n",
+    "        \n",
+    "            self.__state['player'] = 'X'\n",
+    "            self.__state['opponent'] = 'O'\n",
+    "            \n",
+    "        else:\n",
+    "            \n",
+    "            self.__state['player'] = 'O'\n",
+    "            self.__state['opponent'] = 'X'\n",
+    "            \n",
+    "            row, col = tictactoe_solver(self.__state['board'], self.__state['opponent'])\n",
+    "            self.__state['board'][row][col] = self.__state['opponent']       \n",
     "        \n",
     "        initial_observation = dict(self.__state)\n",
     "        \n",
     "        return initial_observation\n",
     "\n",
     "    def render(self, mode='human', close=False):\n",
-    "        for row in self.state['board']: # for every row\n",
+    "        for row in self.__state['board']: # for every row\n",
     "            print(row) # print array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# d = {}\n",
-    "# d['board'] = np.full((3,3), ' ')\n",
-    "# d['player'] = 'X'\n",
-    "# d\n",
-    "# c = d\n",
-    "# b = dict(d)"
+    "def get_empty_spaces(board):\n",
+    "    \n",
+    "    empty_spaces = []\n",
+    "    for row in range(3):\n",
+    "        for column in range(3):\n",
+    "            if board[row][column] == ' ':\n",
+    "                empty_spaces.append((row, column))\n",
+    "            \n",
+    "    return empty_spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def victory_move(board, possible_move):\n",
+    "    \n",
+    "    victors = []\n",
+    "    \n",
+    "    (row, col) = possible_move\n",
+    "    \n",
+    "    maj_diag = [(0,0), (1,1), (2,2)]\n",
+    "    min_diag = [(0,2), (1,1), (2,0)]\n",
+    "    \n",
+    "    to_check = []\n",
+    "    to_check.append(board[row].tolist())\n",
+    "    to_check.append(board[:, col].tolist())\n",
+    "    \n",
+    "    if possible_move in maj_diag:\n",
+    "        to_check.append(board.diagonal().tolist())\n",
+    "      \n",
+    "    if possible_move in min_diag:\n",
+    "        to_check.append(np.rot90(board).diagonal().tolist()) # minor diag\n",
+    "\n",
+    "    for lists in to_check:\n",
+    "        \n",
+    "        if lists.count('X') is 2:\n",
+    "            victors.append('X')  # winner possible from this move\n",
+    "        if lists.count('O') is 2:\n",
+    "            victors.append('O') # winner possible from this move\n",
+    "    \n",
+    "    return victors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def tictactoe_solver(board, solver):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    board: 3x3 np.array of chars ' ', 'X', and 'O'\n",
+    "    solver: 'X' or 'O'\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    opponent = 'X'\n",
+    "    \n",
+    "    if solver is 'X':\n",
+    "        opponent = 'O'\n",
+    "\n",
+    "    win_moves = {'X': [], 'O': []}\n",
+    "    \n",
+    "    possible_moves = get_empty_spaces(board)\n",
+    "\n",
+    "    for move in possible_moves:\n",
+    "\n",
+    "        winners = victory_move(board, move)\n",
+    "        \n",
+    "        if 'X' in winners:\n",
+    "            win_moves['X'].append(move)\n",
+    "\n",
+    "        if 'O' in winners:\n",
+    "            win_moves['O'].append(move)\n",
+    "            \n",
+    "    # try to win if possible\n",
+    "    if win_moves[solver]:\n",
+    "        return random.choice(win_moves[solver])\n",
+    "\n",
+    "    # denny win if possible\n",
+    "    if win_moves[opponent]:\n",
+    "        return random.choice(win_moves[opponent])\n",
+    "    \n",
+    "    possible_moves_set = set(possible_moves) \n",
+    "    corner_moves_set = {(0,0), (0,2), (2,0), (2,2)}\n",
+    "    center_move = (1,1)\n",
+    "    \n",
+    "    # get center if its open\n",
+    "    if center_move in possible_moves_set:\n",
+    "        return center_move\n",
+    "    \n",
+    "    possible_corners = corner_moves_set & possible_moves_set\n",
+    "    \n",
+    "    # get a corner if any are open\n",
+    "    if possible_corners:\n",
+    "        return possible_corners.pop()\n",
+    "    \n",
+    "    # get any possible\n",
+    "    return possible_moves_set.pop()"
    ]
   }
  ],
