added gui render

--- a/gym-tictactoe/gym_tictactoe/envs/tictactoe_env.ipynb
+++ b/gym-tictactoe/gym_tictactoe/envs/tictactoe_env.ipynb
@@ -12,15 +12,15 @@
     "import random\n",
     "import gym\n",
     "from gym import error, spaces, utils\n",
-    "from gym.utils import seeding"
+    "from gym.utils import seeding\n",
+    "\n",
+    "from tkinter import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class TicTacToeEnv(gym.Env):\n",
@@ -42,6 +42,7 @@
     "        board = self.__state['board'] # get board\n",
     "        player = self.__state['player'] # get player\n",
     "        opponent = self.__state['opponent'] # get opponent\n",
+    "        mode = self.__mode # get mode for solver\n",
     "        \n",
     "        if board[row_p][col_p] != ' ': # illegal move\n",
     "            done = True\n",
@@ -55,7 +56,7 @@
     "            if player in possible_win_move_p:\n",
     "                \n",
     "                done = True\n",
-    "                reward = 1000\n",
+    "                reward = 100\n",
     "            \n",
     "            elif not get_empty_spaces(board):\n",
     "                \n",
@@ -64,7 +65,10 @@
     "            \n",
     "            else:\n",
     "                \n",
-    "                row_o, col_o = tictactoe_solver(board, opponent)\n",
+    "                row_o, col_o = tictactoe_solver(board, opponent, mode)\n",
+    "                \n",
+    "                # cycle between easy and hard modes of solver\n",
+    "                mode = not mode\n",
     "\n",
     "                possible_win_move_o = victory_move(board, (row_o, col_o))\n",
     "                board[row_o][col_o] = opponent\n",
@@ -72,14 +76,14 @@
     "                if opponent in possible_win_move_o:\n",
     "                    \n",
     "                    done = True\n",
-    "                    reward = -1000\n",
+    "                    reward = -100\n",
     "                    \n",
     "                elif not get_empty_spaces(board):\n",
     "                    done = True\n",
-    "                    reward = 0 \n",
+    "                    reward = 0\n",
     "                    \n",
     "        observation = dict(self.__state) # copy of game state\n",
-    "        info = {} # empty info\n",
+    "        info = {'mode': self.__mode} # empty info   \n",
     "\n",
     "        return observation, reward, done, info\n",
     "\n",
@@ -98,15 +102,38 @@
     "            self.__state['opponent'] = 'X'\n",
     "            \n",
     "            row, col = tictactoe_solver(self.__state['board'], self.__state['opponent'])\n",
-    "            self.__state['board'][row][col] = self.__state['opponent']       \n",
+    "            self.__state['board'][row][col] = self.__state['opponent']\n",
+    "            \n",
+    "        self.__mode = False\n",
     "        \n",
     "        initial_observation = dict(self.__state)\n",
     "        \n",
     "        return initial_observation\n",
     "\n",
     "    def render(self, mode='human', close=False):\n",
-    "        for row in self.__state['board']: # for every row\n",
-    "            print(row) # print array"
+    "        \n",
+    "        tk = Tk()\n",
+    "        tick(self.__state['board', tk)\n",
+    "        tk.mainloop( )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def tick(board, tk):\n",
+    "    \n",
+    "    for row in range(3):\n",
+    "        for col in range(3):\n",
+    "            \n",
+    "            button = Button(tk, text = board[row][col] , font = ('Times 16 bold'), height = 4, width = 8)\n",
+    "            button.grid(row = row, column = col, sticky = N + S + E + W)\n",
+    "    \n",
+    "    button.after(200, tick)"
    ]
   },
   {
@@ -130,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -167,13 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def tictactoe_solver(board, solver):\n",
+    "def tictactoe_solver(board, solver, easy = False):\n",
     "    \n",
     "    \"\"\"\n",
     "    board: 3x3 np.array of chars ' ', 'X', and 'O'\n",
@@ -186,8 +213,12 @@
     "        opponent = 'O'\n",
     "\n",
     "    win_moves = {'X': [], 'O': []}\n",
+    " \n",
     "    \n",
     "    possible_moves = get_empty_spaces(board)\n",
+    "    \n",
+    "    if easy:\n",
+    "        return random.choice(possible_moves)\n",
     "\n",
     "    for move in possible_moves:\n",
     "\n",
@@ -207,10 +238,12 @@
     "    if win_moves[opponent]:\n",
     "        return random.choice(win_moves[opponent])\n",
     "    \n",
+    "    \"\"\"\n",
     "    possible_moves_set = set(possible_moves) \n",
     "    corner_moves_set = {(0,0), (0,2), (2,0), (2,2)}\n",
     "    center_move = (1,1)\n",
     "    \n",
+    "\n",
     "    # get center if its open\n",
     "    if center_move in possible_moves_set:\n",
     "        return center_move\n",
@@ -220,9 +253,10 @@
     "    # get a corner if any are open\n",
     "    if possible_corners:\n",
     "        return possible_corners.pop()\n",
+    "    \"\"\"\n",
     "    \n",
     "    # get any possible\n",
-    "    return possible_moves_set.pop()"
+    "    return random.choice(possible_moves)"
    ]
   }
  ],
